# Area

./: .env.example  .env.production  .gitignore  HOWTOCONTRIBUTE.md  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  test_email_config.py  test_env_config.py
backend/: .dockerignore  .flake8  Dockerfile  README-DOCKER.md  README.md  entrypoint.sh  go.mod  main.go  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_phase4_all.py  test_phase4_validate.py  test_weather_nantes.py
backend/api/: users.go
backend/area_project/: asgi.py  celery.py  health.py  routing.py  settings.py  urls.py  wsgi.py
backend/area_project/settings/: __init__.py  (+5 more)
backend/automations/: admin.py  apps.py  github_app_views.py  gmail_helper.py  google_webhook_views.py  models.py  notion_pages_views.py  notion_webhook_helpers.py  notion_webhook_views.py  serializers.py  signals.py  tasks.py  twitch_eventsub_views.py  twitch_helper.py  urls.py  validators.py  views.py  webhook_constants.py  webhook_serializers.py  webhook_views.py  webhooks.py
backend/database/: db.go  users.go
backend/docker/: entrypoint.sh
backend/docs/: OAUTH2.md
backend/scripts/: README.md  lint-check.sh  lint-fix.sh  run_tests.sh  test_email.py  test_google_webhooks.py  test_twitch_webhook.py
backend/users/: admin.py  models.py  notification_serializers.py  notification_views.py  oauth_serializers.py  oauth_views.py  password_serializers.py  password_views.py  permissions.py  serializers.py  tests.py  urls.py  views.py
(+425 files in other folders)
